# Sayva

./: .gitignore  CLAUDE.md  NOTICES.md  gradle.properties  local.properties.template  settings.gradle.kts
.claude/: settings.json
.github/workflows/: app-ci.yml  ml-ci.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/res/values/: strings.xml
docs/: ACCESSIBILITY.md  AI_PIPELINE.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DATA_MODEL.md  DESIGN_SYSTEM.md  FEATURES.md  PACKS_WORKFLOW.md  README.md  ROADMAP.md  UI_COMPONENTS.md  USER_FLOWS.md  phase-1-tickets.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
ml/: README.md  pyproject.toml  setup_wsl.sh
ml/packs/ase/: manifest.yaml
ml/packs/ase/data/: asl_alphabet.py  wlasl.py
ml/packs/ase/labels/: ar.json  en.json
ml/packs/ase/vocabularies/: fingerspelling.yaml  temporal_v1.yaml
ml/scripts/: build_asl_cache.py  generate_golden_inference.py  generate_landmark_fixture.py  generate_pack.py  verify_pack_version_bump.py
ml/src/sayva_ml/: __init__.py  vocabulary.py
ml/src/sayva_ml/data/: __init__.py  mediapipe_workers.py  synthetic.py  synthetic_temporal.py
ml/src/sayva_ml/evaluation/: __init__.py
ml/src/sayva_ml/export/: __init__.py  to_coreml.py  to_tflite.py  to_tflite_temporal_keras.py  to_tflite_temporal_windows.py  to_tflite_windows.py
ml/src/sayva_ml/models/: __init__.py  fingerspelling_mlp.py  temporal_lstm.py
ml/src/sayva_ml/packs/: __init__.py  data_loader.py  manifest.py  registry.py
ml/src/sayva_ml/preprocessing/: __init__.py  landmark.py
ml/src/sayva_ml/training/: __init__.py  train_fingerspelling.py  train_temporal.py
ml/tests/: test_asl_alphabet_dataset.py  test_data_loader.py  test_fingerspelling_mlp.py  test_golden_inference.py  test_landmark_parity.py  test_pack_manifest.py  test_synthetic_dataset.py  test_synthetic_temporal.py  test_temporal_lstm.py  test_vocabulary.py
shared/: build.gradle.kts
shared/src/androidHostTest/resources/: golden_inference.json  landmark_parity.json
shared/src/androidHostTest/resources/language_packs/: index.json
shared/src/androidMain/assets/mediapipe/: README.md
shared/src/commonMain/composeResources/files/models/: README.md
(+194 files in other folders)
